methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:2: error: not found: value seenBaggle
  if (seenBaggle()==true){
      ^MethodsReturning:3: error: type mismatch;
 found   : Unit
 required: Boolean
    backward(6)
            ^MethodsReturning:10: error: type mismatch;
 found   : Unit
 required: Boolean
    left()
        ^