methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  if (seenBaggle()==true){
    backward(6)
  }
  else {
    forward(6)
    backward(6)
    right()
    forward()
    left()
  }
}